--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ server.error.include-message = always
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/demo?useSSL=false&useLegacyDatetimeCode=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=
 
 # Hibernate ddl auto (none, create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL= DEBUG
 #spring.jpa.properties.hibernate.format_sql=true
 spring.data.web.pageable.default-page-size = 12
+
+duong.openapi.dev-url=http://localhost:8080
+duong.openapi.prod-url=https://duong-api.com
+
