--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,3 +20,6 @@ spring.data.web.pageable.default-page-size = 12
 duong.openapi.dev-url=http://localhost:8080
 duong.openapi.prod-url=https://duong-api.com
 
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
