--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ server.error.include-message = always
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/demo?useSSL=false&useLegacyDatetimeCode=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mysql
 
 # Hibernate ddl auto (none, create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
